# wedding-planner

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  setup.sh
grpc-db/: Cargo.toml  Dockerfile
grpc-db/src/: database.rs  goals.rs  guests.rs  images.rs  main.rs
http-api/: Cargo.toml  Dockerfile  README.md
http-api/src/: api.rs  goals.rs  guests.rs  images.rs  main.rs  responses.rs
nginx/: Dockerfile  generate_certs.sh  nginx.conf
proto/: Cargo.toml  build.rs  methods.proto  objects.proto  service.proto  wedding.proto
proto/src/: common.rs  lib.rs
