[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
poem-openapi = "2"
serde = "1"
uuid = { version = "1.3", features = ["v4"] }

[build-dependencies]
tonic-build = "0.8"
